#9 Add function to get sensor location data and to send this to Backend.

--- a/src/BanglaTracker.MobileApp/MainPage.xaml
+++ b/src/BanglaTracker.MobileApp/MainPage.xaml
@@ -39,6 +39,13 @@
                 HorizontalOptions="Fill" />
 
             <Button
+                x:Name="OpenTrackingLocationBtn"
+                Text="Open Tracking Location" 
+                SemanticProperties.Hint="Open Tracking Location Page"
+                Clicked="OnOpenTrackingLocationBtnClicked"
+                HorizontalOptions="Fill" />
+            
+            <Button
                 Text="Dummy Page"
                 Clicked="OnCounterClicked1" />
 
